{{$NEXT}}

0.27     2011-09-24

[ENHANCEMENTS]

- All objects which can stringify now support a ->stream_to API as well. This
  lets you stream their string output to a sub ref, filehandle, or an object
  with a ->print() method. If you are dealing with large emails, this API may
  be more efficient than generating a single string in memory.

[API CHANGES]

- Renamed the Header->as_header_string and HeaderAttribute->as_header_string
  methods to as_string, so that all objects have the same stringification API.


0.26     2011-09-19

[BUG FIXES]

- Add missing prereq for MooseX::Role::Parameterized. Reported by zby.


0.25     2011-09-15

[BUG FIXES]

- When a header value contained any non-ASCII content, Courriel would
  mistakenly MIME encode the whole value. In some cases, this is okay, but for
  some header fields it is wrong. For example, when a field contains an email
  address the actual address portion must be unencoded.


0.24     2011-09-13

[ENHANCEMENTS]

- The is_binary flag has been replaced with an is_character flag. This flag
  defaults to false. Suggested by zby.


0.23     2011-09-13

[ENHANCEMENTS]

- Courriel->parse now accepts an is_binary flag so you can pass decoded
  (utf-8) data as the email text. However, it's probably smarter to simply
  pass binary data to Courriel and let it do the decoding. The issue was
  brought up by zby.


0.22     2011-09-13

[BUG FIXES]

- Require List::MoreUtils 0.28+, as tests fail with earlier versions.

- Added missing prereq on File::Slurp.


0.21     2011-09-12

[API CHANGES]

- The ->get_attribute() method for Courriel::ContentType and ::Disposition
  objects was replaced by ->attribute in 0.20.

[ENHANCEMENTS]

- Added a new ->get_values() method to Courriel::Headers. This lets you get
  the header string values directly.

- Added a new ->attribute_value() for Courriel::Header::ContentType and
  ::Disposition. This lets you get the attribute's string value, if the
  attribute exists. Suggested by zby.
