@@ -210,15 +210,21 @@ Returns a hash (not a reference) of the attributes passed to the constructor.
 
 Attributes are L<Courriel::HeaderAttribute> objects.
 
+The keys of the hash are all lower case, though the original casing is
+preserved in the C<name()> returned by the L<Courriel::HeaderAttribute>
+object.
+
 =head2 $disp->attribute($key)
 
-Given a key, returns the named L<Courriel::HeaderAttribute>
-object. Obviously, this value can be C<undef> if the attribute doesn't exist.
+Given a key, returns the named L<Courriel::HeaderAttribute> object. Obviously,
+this value can be C<undef> if the attribute doesn't exist. Name lookup is
+case-insensitive.
 
 =head2 $disp->attribute_value($key)
 
 Given a key, returns the named attribute's value as a string. Obviously, this
-value can be C<undef> if the attribute doesn't exist.
+value can be C<undef> if the attribute doesn't exist. Name lookup is
+case-insensitive.
 
 The attribute is a L<Courriel::HeaderAttribute> object.
 
